@@ -426,6 +426,7 @@ compileJava {
         options.compilerArgs = [
                 '--module-path', classpath.asPath,
                 '--add-exports', "javafx.graphics/com.sun.javafx.tk=nl.jixxed.eliteodysseymaterials",
+                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=nl.jixxed.eliteodysseymaterials',
                 '--add-exports', "javafx.graphics/com.sun.glass.ui=nl.jixxed.eliteodysseymaterials"
         ]
         classpath = files()
@@ -437,6 +438,7 @@ run {
 //            '--add-opens=javafx.graphics/javafx.scene.layout=nl.jixxed.eliteodysseymaterials',
             '--add-exports=javafx.graphics/com.sun.glass.ui=nl.jixxed.eliteodysseymaterials',
             '--add-exports=javafx.graphics/com.sun.javafx.tk=nl.jixxed.eliteodysseymaterials',
+            '--add-exports=javafx.controls/com.sun.javafx.scene.control=nl.jixxed.eliteodysseymaterials',
             '--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls',
             '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming'
     ]
